--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,43 @@
 /* Estilos da pagina index.html */
+
+:root {
+  --color-text: #000;
+  --background-color:rgb(255, 255, 255);
+  --background-color2:#f2f2f2;
+}
+
+body {
+  background:var(--background-color);
+  color: var(--color-text);
+  font-family: Arial, sans-serif;
+} 
+
+#darkmodeToggle {
+  display: none;
+} 
+
+#darkmodeToggle:checked + main {
+  --color-text: #fff;
+  --background-color:rgb(0, 0, 0);
+  --background-color2:#222;
+  background:var(--background-color);
+  color: var(--color-text);
+  transition: .5S ease-in-out background, .5s ease-in-out color;
+} 
+
+.darkmodeLabel {
+  cursor:pointer;
+}
+
+#darkmodeToggle:checked + main .darkmodeLabel::after {
+  content: ' on'
+}
+
+
+.darkmodeLabel::after {
+  content: ' off';
+}  
+
 .center {
   text-align: center;
 }
@@ -18,7 +57,7 @@
 
 #menu li a {
   text-decoration: none;
-  color: black;
+  color: var(--color-text);
 }
 
 #menu li a:hover {
